@@ -124,26 +124,27 @@ module StateMachine
       # the current event
       def add_actions
         attribute = machine.attribute
-        name = self.name
+        qualified_name = name = self.name
+        qualified_name = "#{name}_#{machine.namespace}" if machine.namespace
         
         machine.owner_class.class_eval do
           # Checks whether the event can be fired on the current object
-          define_method("can_#{name}?") do
+          define_method("can_#{qualified_name}?") do
             self.class.state_machines[attribute].events[name].can_fire?(self)
           end
           
           # Gets the next transition that would be performed if the event were to be fired now
-          define_method("next_#{name}_transition") do
+          define_method("next_#{qualified_name}_transition") do
             self.class.state_machines[attribute].events[name].next_transition(self)
           end
           
           # Fires the event
-          define_method(name) do |*args|
+          define_method(qualified_name) do |*args|
             self.class.state_machines[attribute].events[name].fire(self, *args)
           end
           
           # Fires the event, raising an exception if it fails to transition
-          define_method("#{name}!") do |*args|
+          define_method("#{qualified_name}!") do |*args|
             send(name, *args) || raise(StateMachine::InvalidTransition, "Cannot transition via :#{name} from #{send(attribute).inspect}")
           end
         end
